﻿# Changelog
Comprehensive changes can be found in Git change history:
	https://github.com/mkahvi/taskmaster/commits/master

## [0.11...]
### 2018-11-29
	Fixed: Watchlist copy to clipboard option was not including some options.
### 2018-11-28
	Changed: Powerdown delay is untouched in the .ini to allow swapping back and forth between settings.
		It is now simply ignored when it is problematic.
	Fixed: Component configuration was severely outdated.
	Removed: Immediate configuration saving. It was causing bugs for no real benefits.
	Fixed: Some oddities in power config saving.
	Fixed: Powerdown delay logic was flipped.
### 2018-11-27
	Fixed: Show Inaction was showing debug info for things that were not explicitly enabled.
	Added: Monitor power and power mode during session lock options added to power config.
	Fixed: Incorrect reading of some command-line arguments, notably --bootdelay which ignored the supplied number.
	Fixed: --bootdelay was not actually used, now it is. Max delay is 5 minutes.
	Added: Proper launch behaviour support. Auto-adjust option in Core.ini deprecated in favor of better Behaviour option.
### 2018-11-25
	Added: Show CPU sample frequency in power configuration. This is to help understand the delays involved.
	Fixed: Show Inaction was showing some debug information even when Process debug was not enabled as well.
	Fixed: Power config window was messing with high and low power mode backoff levels. Constrained to 1 to 20 instead of 5 to 95.
### 2018-11-20
	Added: Behaviour and Restore Mode configuration to power configuration UI
	Changed: 'Power auto-adjust configuration' is now just 'Power configuration'
	Fixed: 'Free memory for' option did not actually work properly if you selected anything besides the empty option.
### 2018-11-17
	Internal: A lot of changes that had been left for later. At most fixed some obscure bugs.
	Fixed: Path visibility option was not actually read from Watchlist.ini
### 2018-11-16