@@ -439,7 +439,7 @@ namespace Taskmaster
 					}
 
 					if (Taskmaster.DebugForeground && Taskmaster.ShowInaction)
-						Log.Debug("Active Window (#{Pid}): {Title}", activewindowev.Id, activewindowev.Title);
+						Log.Debug("<Foreground >Active #" + activewindowev.Id + ": " + activewindowev.Title);
 				}
 				else
 				{
